2006-04-11  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/__init__.py:
	* gobject/gobjectmodule.c (_wrap_pyg_type_register),
	(pyg__install_metaclass, init_gobject):  GObjectMeta now moved to
	python-land (__init__.py).
	
	* gobject/pygobject-private.h:
	* gobject/pygobject.c (pygobject_register_class):
	PyGObject_MetaType is now a pointer, not structure.

	* gobject/gobjectmodule.c (_wrap_pyg_type_register): Add optional
	type name parameter.

	* tests/common.py (importModule): Include original exception
	string in the raised SystemExit.

2006-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/.cvsignore:
	* gobject/Makefile.am:
	* gobject/__init__.py:
	* gobject/gobjectmodule.c: (init_gobject):
	* gobject/pygobject.h:
	* tests/Makefile.am:
	* tests/common.py:

	Turn gobject into a package; move _gobject to gobject._gobject and
	add gobject/__init__.py. Update macros and testsuite.

2006-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac: Post release version bump

=== PyGObject 2.10.1 ===
2006-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

2006-04-11  Andy Wingo  <wingo@pobox.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c (create_property): Parse unsigned int64
	constraints in param spec declaration using the "K" ParseTuple
	format unit, not L -- allows the full range of the datatype to be
	parsed. K format unit added in python 2.3.

2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_properties.py: Add test for #335854.

	* pygtk.py.in (require): For version == '2.0', use a hardcoded
	pygtk path, recorded during build.

	* gobject/gobjectmodule.c (_pyg_strv_to_gvalue): Don't allow
	arbitrary sequences, only tuple or list, since a string is a
	sequence too.
	(pyg_object_new): Add a bit more detail to the exception string.

2006-01-16  Johan Dahlin  <johan@gnome.org>

	* Makefile.am: Include dsextras.py in the dist and install it.
