@@ -48,4 +48,29 @@ class GObjectMeta(type):
         type_register(cls, namespace.get('__gtype_name__'))
 
 _gobject._install_metaclass(GObjectMeta)
+
+# TYPE_INVALID defined in gobjectmodule.c
+TYPE_NONE = type_from_name('void')
+TYPE_INTERFACE = type_from_name('GInterface')
+TYPE_CHAR = type_from_name('gchar')
+TYPE_UCHAR = type_from_name('guchar')
+TYPE_BOOLEAN = type_from_name('gboolean')
+TYPE_INT = type_from_name('gint')
+TYPE_UINT = type_from_name('guint')
+TYPE_LONG = type_from_name('glong')
+TYPE_ULONG = type_from_name('gulong')
+TYPE_INT64 = type_from_name('gint64')
+TYPE_UINT64 = type_from_name('guint64')
+TYPE_ENUM = type_from_name('GEnum')
+TYPE_FLAGS = type_from_name('GFlags')
+TYPE_FLOAT = type_from_name('gfloat')
+TYPE_DOUBLE = type_from_name('gdouble')
+TYPE_STRING = type_from_name('gchararray')
+TYPE_POINTER = type_from_name('gpointer')
+TYPE_BOXED = type_from_name('GBoxed')
+TYPE_PARAM = type_from_name('GParam')
+TYPE_OBJECT = type_from_name('GObject')
+TYPE_PYOBJECT = type_from_name('PyObject')
+TYPE_UNICHAR = TYPE_UINT
+
 del _gobject
